[package]
name = "fftpitchshift"
version = "0.1.0"
authors = ["DasEtwas <18222134+DasEtwas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"

[dev-dependencies]
hound = "3.4.0"

[profile.release]
debug = true

[profile.test]
opt-level = 3